// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PivotTable - PivotTableBoard should render correctly 1`] = `
.emotion-47 {
  padding: 0.75rem;
  margin: 0.25rem;
  min-height: 7.18rem;
}

.emotion-58 {
  border: 1px solid #D3D4DD;
  padding: 0.75rem 1.25rem;
}

.emotion-64 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -1rem;
  margin-right: -1rem;
  margin-top: -0.5rem;
  margin-bottom: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-15 {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  width: calc(100% / 12 * 12);
}

@media (min-width:600px) {
  .emotion-15 {
    width: calc(100% / 12 * 12);
  }
}

@media (min-width:960px) {
  .emotion-15 {
    width: calc(100% / 12 * 6);
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-1 {
  background-color: #F0F0F5;
  height: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-bottom: 1px solid #D3D4DD;
}

.emotion-14 {
  border: 1px solid #D3D4DD;
}

.emotion-13 {
  min-height: 7.18rem;
}

.emotion-19 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  text-align: center;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 7.18rem;
  min-width: 16rem;
  margin: 0.25rem;
  padding: 0.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-2 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-16 {
  fill: currentColor;
  font-size: 1.5rem;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.emotion-24 {
  fill: currentColor;
  font-size: 1.5rem;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-46 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-45 {
  display: inline-block;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-45:first-of-type {
  margin-top: 0;
}

.emotion-45:last-of-type {
  margin-bottom: 0;
}

.emotion-45:empty {
  display: none;
}

.emotion-37 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-35 {
  background-color: #FFFFFF;
  border: 1px solid #8F8FA2;
  border-radius: 100px;
  display: inline-block;
  height: 24px;
  position: relative;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  vertical-align: middle;
  width: 24px;
}

.emotion-35:after {
  background-color: #FFFFFF;
  border: 5px solid #FFFFFF;
  border-radius: 100px;
  content: "";
  display: block;
  height: 2px;
  margin-left: 6px;
  margin-top: 6px;
  opacity: 0;
  text-align: center;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  width: 2px;
}

.emotion-36 {
  margin-left: 0.5rem;
}

.emotion-34 {
  opacity: 0;
  margin-right: -13px;
}

.emotion-34:hover + .emotion-35 {
  border-color: #7A7B8E;
}

.emotion-34:checked + .emotion-35 {
  background-color: #0069D0;
  border-color: #0069D0;
}

.emotion-34:checked + .emotion-35:after {
  opacity: 1;
}

.emotion-34:focus + .emotion-35 {
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-34:disabled + .emotion-35 {
  opacity: 0.4;
  cursor: not-allowed;
}

.emotion-34:disabled + .emotion-35 + .emotion-36 {
  color: #AAAAB9;
  cursor: not-allowed;
}

.emotion-59 {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

@media (min-width:600px) {
  .emotion-59 {
    width: calc(100% / 12 * 12);
  }
}

.emotion-57 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -1rem;
  margin-right: -1rem;
  margin-top: -0.5rem;
  margin-bottom: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-54 {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  width: calc(100% / 12 * 10);
}

.emotion-53 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: minmax(min-content,max-content);
  grid-gap: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-51 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  font-weight: bold;
}

.emotion-56 {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  width: calc(100% / 12 * 2);
}

.emotion-55 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid #696979;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  float: right;
}

.emotion-55 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-55:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-55:focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-55:not(:disabled):hover {
  background-color: rgba(122,123,142,0.16);
}

.emotion-63 {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  width: calc(100% / 12 * 12);
}

.emotion-62 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: minmax(min-content,max-content);
  grid-gap: 1rem;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-60 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: #FFFFFF;
  border: 1px solid #696979;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.75rem - 1px) 1rem;
}

.emotion-60 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-60:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-60:focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-60:not(:disabled):hover {
  background-color: #F0F0F5;
}

.emotion-61 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: #FFFFFF;
  border: 1px solid #696979;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #0069D0;
  color: #FFFFFF;
  border: 1px solid #0069D0;
  font-size: 0.875rem;
  padding: calc(0.75rem - 1px) 1rem;
}

.emotion-61 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-61:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-61:focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-61:not(:disabled):hover {
  background-color: #F0F0F5;
}

.emotion-61:not(:disabled):hover {
  background-color: #0051A2;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 7.18rem;
  min-width: 16rem;
  margin: 0.25rem;
  padding: 0.75rem;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-6 {
  display: inline-block;
  margin: 0.25rem 0.25rem;
}

.emotion-5 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #0069D0;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  border: solid 1px #8F8FA2;
  color: #24252E;
  border-radius: 2px;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2),0 2px 1px -1px rgba(0,0,0,0.12),0 1px 1px 0 rgba(0,0,0,0.14);
  padding-left: 0px;
  font-size: 13px;
}

.emotion-5 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-5:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-5:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-5:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-4 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: minmax(min-content,max-content);
  grid-gap: 0.5rem;
}

.emotion-44 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-38 {
  padding-top: 1rem;
  padding-left: 1rem;
  margin-bottom: 0.5rem;
  margin-right: 1rem;
}

<div>
  <div
    class="emotion-64"
  >
    <div
      class="emotion-15"
    >
      <div
        class="emotion-14"
      >
        <div
          class="emotion-1"
        >
          <h4
            class="emotion-0"
          >
            Available fields
          </h4>
        </div>
        <div
          class="emotion-13"
        >
          <div
            class="emotion-12"
            data-testid="droppable-available"
          >
            <div>
              <div
                class="emotion-6"
                draggable="true"
              >
                <button
                  aria-haspopup="true"
                  class="emotion-5"
                  type="button"
                >
                  <span>
                    <div
                      class="emotion-4"
                    >
                      <svg
                        aria-hidden="true"
                        class="emotion-2"
                        height="1em"
                        role="img"
                        viewBox="0 0 24 24"
                        width="1em"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M8.234 7.848a2 2 0 101.532-3.696 2 2 0 00-1.532 3.696zm1.532 2.304a2.001 2.001 0 10-1.533 3.698 2.001 2.001 0 001.533-3.697zm0 6a2.001 2.001 0 10-1.533 3.698 2.001 2.001 0 001.533-3.698zm4.469-8.304a2 2 0 101.531-3.696 2 2 0 00-1.531 3.696zm1.53 2.304a2.001 2.001 0 10-1.532 3.698 2.001 2.001 0 001.532-3.697zm0 6a2.001 2.001 0 10-1.532 3.698 2.001 2.001 0 001.532-3.698z"
                          fill-rule="evenodd"
                        />
                      </svg>
                      Name
                      <svg
                        aria-hidden="true"
                        class="emotion-2"
                        height="1em"
                        role="img"
                        viewBox="0 0 24 24"
                        width="1em"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M16.294 8.294a1 1 0 111.414 1.414l-5 5a1 1 0 01-1.414 0l-5.001-5a1 1 0 011.414-1.415l4.294 4.294 4.293-4.293z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                  </span>
                </button>
              </div>
              <div
                class="emotion-6"
                draggable="true"
              >
                <button
                  aria-haspopup="true"
                  class="emotion-5"
                  type="button"
                >
                  <span>
                    <div
                      class="emotion-4"
                    >
                      <svg
                        aria-hidden="true"
                        class="emotion-2"
                        height="1em"
                        role="img"
                        viewBox="0 0 24 24"
                        width="1em"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M8.234 7.848a2 2 0 101.532-3.696 2 2 0 00-1.532 3.696zm1.532 2.304a2.001 2.001 0 10-1.533 3.698 2.001 2.001 0 001.533-3.697zm0 6a2.001 2.001 0 10-1.533 3.698 2.001 2.001 0 001.533-3.698zm4.469-8.304a2 2 0 101.531-3.696 2 2 0 00-1.531 3.696zm1.53 2.304a2.001 2.001 0 10-1.532 3.698 2.001 2.001 0 001.532-3.697zm0 6a2.001 2.001 0 10-1.532 3.698 2.001 2.001 0 001.532-3.698z"
                          fill-rule="evenodd"
                        />
                      </svg>
                      Size
                      <svg
                        aria-hidden="true"
                        class="emotion-2"
                        height="1em"
                        role="img"
                        viewBox="0 0 24 24"
                        width="1em"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M16.294 8.294a1 1 0 111.414 1.414l-5 5a1 1 0 01-1.414 0l-5.001-5a1 1 0 011.414-1.415l4.294 4.294 4.293-4.293z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-15"
    >
      <div
        class="emotion-14"
      >
        <div
          class="emotion-1"
        >
          <h4
            class="emotion-0"
          >
            <svg
              aria-hidden="true"
              class="emotion-16"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M5 8c-.667 0-1-.333-1-1s.333-1 1-1h14c.667 0 1 .333 1 1s-.333 1-1 1H5zm0 10c-.667 0-1-.333-1-1s.333-1 1-1h14c.667 0 1 .332 1 1 0 .668-.333 1-1 1H5zm0-5c-.667 0-1-.334-1-1.002 0-.669.333-1.001 1-.998h14c.667 0 1 .333 1 1s-.333 1-1 1H5z"
              />
            </svg>
            Columns
          </h4>
        </div>
        <div
          class="emotion-13"
        >
          <div
            class="emotion-20"
            data-testid="droppable-column"
          >
            <div
              class="emotion-19"
            >
              <i>
                Drag items to insert into table
              </i>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-15"
    >
      <div
        class="emotion-14"
      >
        <div
          class="emotion-1"
        >
          <h4
            class="emotion-0"
          >
            <svg
              aria-hidden="true"
              class="emotion-24"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M5 8c-.667 0-1-.333-1-1s.333-1 1-1h14c.667 0 1 .333 1 1s-.333 1-1 1H5zm0 10c-.667 0-1-.333-1-1s.333-1 1-1h14c.667 0 1 .332 1 1 0 .668-.333 1-1 1H5zm0-5c-.667 0-1-.334-1-1.002 0-.669.333-1.001 1-.998h14c.667 0 1 .333 1 1s-.333 1-1 1H5z"
              />
            </svg>
            Rows
          </h4>
        </div>
        <div
          class="emotion-13"
        >
          <div
            class="emotion-20"
            data-testid="droppable-row"
          >
            <div
              class="emotion-19"
            >
              <i>
                Drag items to insert into table
              </i>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-15"
    >
      <div
        class="emotion-14"
      >
        <div
          class="emotion-1"
        >
          <h4
            class="emotion-0"
          >
            Kind of presentation
          </h4>
        </div>
        <div
          class="emotion-13"
        >
          <div
            class="emotion-47"
          >
            <div
              class="emotion-46"
            >
              <div
                class="emotion-45"
              >
                <div
                  class="emotion-44"
                >
                  <div
                    class="emotion-38"
                  >
                    <label
                      class="emotion-37"
                    >
                      <input
                        checked=""
                        class="emotion-34"
                        name="aggregator"
                        type="radio"
                        value="0"
                      />
                      <span
                        class="emotion-35"
                      />
                      <span
                        class="emotion-36"
                      >
                        Count
                      </span>
                    </label>
                  </div>
                  <div
                    class="emotion-38"
                  >
                    <label
                      class="emotion-37"
                    >
                      <input
                        class="emotion-34"
                        name="aggregator"
                        type="radio"
                        value="1"
                      />
                      <span
                        class="emotion-35"
                      />
                      <span
                        class="emotion-36"
                      >
                        Percentage
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-59"
    >
      <div
        class="emotion-58"
      >
        <div
          class="emotion-57"
        >
          <div
            class="emotion-54"
          >
            <div
              class="emotion-53"
            >
              <span
                class="emotion-51"
              >
                Applied filters
              </span>
              <div
                class="emotion-46"
              />
            </div>
          </div>
          <div
            class="emotion-56"
          >
            <button
              class="emotion-55"
              type="button"
            >
              <span>
                Clear filters
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-63"
    >
      <div
        class="emotion-62"
      >
        <button
          class="emotion-60"
          type="button"
        >
          <span>
            Clear table
          </span>
        </button>
        <div />
        <button
          class="emotion-61"
          type="button"
        >
          <span>
            Generate table
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`PivotTable - PivotTableBoard should render with initial fields 1`] = `
.emotion-46 {
  padding: 0.75rem;
  margin: 0.25rem;
  min-height: 7.18rem;
}

.emotion-69 {
  border: 1px solid #D3D4DD;
  padding: 0.75rem 1.25rem;
}

.emotion-75 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -1rem;
  margin-right: -1rem;
  margin-top: -0.5rem;
  margin-bottom: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-6 {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  width: calc(100% / 12 * 12);
}

@media (min-width:600px) {
  .emotion-6 {
    width: calc(100% / 12 * 12);
  }
}

@media (min-width:960px) {
  .emotion-6 {
    width: calc(100% / 12 * 6);
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-1 {
  background-color: #F0F0F5;
  height: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-bottom: 1px solid #D3D4DD;
}

.emotion-5 {
  border: 1px solid #D3D4DD;
}

.emotion-4 {
  min-height: 7.18rem;
}

.emotion-2 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  text-align: center;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 7.18rem;
  min-width: 16rem;
  margin: 0.25rem;
  padding: 0.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-10 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-7 {
  fill: currentColor;
  font-size: 1.5rem;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.emotion-19 {
  fill: currentColor;
  font-size: 1.5rem;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-45 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-44 {
  display: inline-block;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-44:first-of-type {
  margin-top: 0;
}

.emotion-44:last-of-type {
  margin-bottom: 0;
}

.emotion-44:empty {
  display: none;
}

.emotion-36 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-34 {
  background-color: #FFFFFF;
  border: 1px solid #8F8FA2;
  border-radius: 100px;
  display: inline-block;
  height: 24px;
  position: relative;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  vertical-align: middle;
  width: 24px;
}

.emotion-34:after {
  background-color: #FFFFFF;
  border: 5px solid #FFFFFF;
  border-radius: 100px;
  content: "";
  display: block;
  height: 2px;
  margin-left: 6px;
  margin-top: 6px;
  opacity: 0;
  text-align: center;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  width: 2px;
}

.emotion-35 {
  margin-left: 0.5rem;
}

.emotion-33 {
  opacity: 0;
  margin-right: -13px;
}

.emotion-33:hover + .emotion-34 {
  border-color: #7A7B8E;
}

.emotion-33:checked + .emotion-34 {
  background-color: #0069D0;
  border-color: #0069D0;
}

.emotion-33:checked + .emotion-34:after {
  opacity: 1;
}

.emotion-33:focus + .emotion-34 {
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-33:disabled + .emotion-34 {
  opacity: 0.4;
  cursor: not-allowed;
}

.emotion-33:disabled + .emotion-34 + .emotion-35 {
  color: #AAAAB9;
  cursor: not-allowed;
}

.emotion-70 {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

@media (min-width:600px) {
  .emotion-70 {
    width: calc(100% / 12 * 12);
  }
}

.emotion-68 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -1rem;
  margin-right: -1rem;
  margin-top: -0.5rem;
  margin-bottom: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-65 {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  width: calc(100% / 12 * 10);
}

.emotion-64 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: minmax(min-content,max-content);
  grid-gap: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-50 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  font-weight: bold;
}

.emotion-54 {
  display: inline-block;
  margin-bottom: 0.25rem;
  margin-top: 0.25rem;
}

.emotion-54:first-of-type {
  margin-top: 0;
}

.emotion-54:last-of-type {
  margin-bottom: 0;
}

.emotion-54:empty {
  display: none;
}

.emotion-67 {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  width: calc(100% / 12 * 2);
}

.emotion-66 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid #696979;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  float: right;
}

.emotion-66 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-66:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-66:focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-66:not(:disabled):hover {
  background-color: rgba(122,123,142,0.16);
}

.emotion-74 {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  width: calc(100% / 12 * 12);
}

.emotion-73 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: minmax(min-content,max-content);
  grid-gap: 1rem;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-71 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: #FFFFFF;
  border: 1px solid #696979;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.75rem - 1px) 1rem;
}

.emotion-71 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-71:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-71:focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-71:not(:disabled):hover {
  background-color: #F0F0F5;
}

.emotion-72 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: #FFFFFF;
  border: 1px solid #696979;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #0069D0;
  color: #FFFFFF;
  border: 1px solid #0069D0;
  font-size: 0.875rem;
  padding: calc(0.75rem - 1px) 1rem;
}

.emotion-72 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-72:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-72:focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-72:not(:disabled):hover {
  background-color: #F0F0F5;
}

.emotion-72:not(:disabled):hover {
  background-color: #0051A2;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 7.18rem;
  min-width: 16rem;
  margin: 0.25rem;
  padding: 0.75rem;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-14 {
  display: inline-block;
  margin: 0.25rem 0.25rem;
}

.emotion-13 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #0069D0;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  border: solid 1px #8F8FA2;
  color: #24252E;
  border-radius: 2px;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2),0 2px 1px -1px rgba(0,0,0,0.12),0 1px 1px 0 rgba(0,0,0,0.14);
  padding-left: 0px;
  font-size: 13px;
}

.emotion-13 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-13:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-13:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-13:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-12 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: minmax(min-content,max-content);
  grid-gap: 0.5rem;
}

.emotion-53 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: minmax(min-content,max-content);
  grid-gap: 0.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-52 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.25rem 0.5rem;
  font-weight: bold;
  border-radius: 12px;
  white-space: nowrap;
  line-height: 1rem;
  font-size: 0.8125rem;
  height: 1.5rem;
  background: #D3D4DD;
  background-color: #ECF0FF;
  color: #0069D0;
  border: solid 1px #0069D0;
  margin-left: 0.5rem;
  margin-bottom: 0.25rem;
}

.emotion-51 {
  fill: currentColor;
  font-size: 1.5rem;
  font-size: 1rem;
  margin-left: 0.125rem;
}

.emotion-51:hover {
  cursor: pointer;
  color: #D01E29;
}

.emotion-43 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-37 {
  padding-top: 1rem;
  padding-left: 1rem;
  margin-bottom: 0.5rem;
  margin-right: 1rem;
}

<div>
  <div
    class="emotion-75"
  >
    <div
      class="emotion-6"
    >
      <div
        class="emotion-5"
      >
        <div
          class="emotion-1"
        >
          <h4
            class="emotion-0"
          >
            Available fields
          </h4>
        </div>
        <div
          class="emotion-4"
        >
          <div
            class="emotion-3"
            data-testid="droppable-available"
          >
            <div
              class="emotion-2"
            >
              <i>
                Drag items to insert into table
              </i>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-5"
      >
        <div
          class="emotion-1"
        >
          <h4
            class="emotion-0"
          >
            <svg
              aria-hidden="true"
              class="emotion-7"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M5 8c-.667 0-1-.333-1-1s.333-1 1-1h14c.667 0 1 .333 1 1s-.333 1-1 1H5zm0 10c-.667 0-1-.333-1-1s.333-1 1-1h14c.667 0 1 .332 1 1 0 .668-.333 1-1 1H5zm0-5c-.667 0-1-.334-1-1.002 0-.669.333-1.001 1-.998h14c.667 0 1 .333 1 1s-.333 1-1 1H5z"
              />
            </svg>
            Columns
          </h4>
        </div>
        <div
          class="emotion-4"
        >
          <div
            class="emotion-15"
            data-testid="droppable-column"
          >
            <div>
              <div
                class="emotion-14"
                draggable="true"
              >
                <button
                  aria-haspopup="true"
                  class="emotion-13"
                  type="button"
                >
                  <span>
                    <div
                      class="emotion-12"
                    >
                      <svg
                        aria-hidden="true"
                        class="emotion-10"
                        height="1em"
                        role="img"
                        viewBox="0 0 24 24"
                        width="1em"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M8.234 7.848a2 2 0 101.532-3.696 2 2 0 00-1.532 3.696zm1.532 2.304a2.001 2.001 0 10-1.533 3.698 2.001 2.001 0 001.533-3.697zm0 6a2.001 2.001 0 10-1.533 3.698 2.001 2.001 0 001.533-3.698zm4.469-8.304a2 2 0 101.531-3.696 2 2 0 00-1.531 3.696zm1.53 2.304a2.001 2.001 0 10-1.532 3.698 2.001 2.001 0 001.532-3.697zm0 6a2.001 2.001 0 10-1.532 3.698 2.001 2.001 0 001.532-3.698z"
                          fill-rule="evenodd"
                        />
                      </svg>
                      Size
                      <svg
                        aria-hidden="true"
                        class="emotion-10"
                        height="1em"
                        role="img"
                        viewBox="0 0 24 24"
                        width="1em"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M16.294 8.294a1 1 0 111.414 1.414l-5 5a1 1 0 01-1.414 0l-5.001-5a1 1 0 011.414-1.415l4.294 4.294 4.293-4.293z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-5"
      >
        <div
          class="emotion-1"
        >
          <h4
            class="emotion-0"
          >
            <svg
              aria-hidden="true"
              class="emotion-19"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M5 8c-.667 0-1-.333-1-1s.333-1 1-1h14c.667 0 1 .333 1 1s-.333 1-1 1H5zm0 10c-.667 0-1-.333-1-1s.333-1 1-1h14c.667 0 1 .332 1 1 0 .668-.333 1-1 1H5zm0-5c-.667 0-1-.334-1-1.002 0-.669.333-1.001 1-.998h14c.667 0 1 .333 1 1s-.333 1-1 1H5z"
              />
            </svg>
            Rows
          </h4>
        </div>
        <div
          class="emotion-4"
        >
          <div
            class="emotion-15"
            data-testid="droppable-row"
          >
            <div>
              <div
                class="emotion-14"
                draggable="true"
              >
                <button
                  aria-haspopup="true"
                  class="emotion-13"
                  type="button"
                >
                  <span>
                    <div
                      class="emotion-12"
                    >
                      <svg
                        aria-hidden="true"
                        class="emotion-10"
                        height="1em"
                        role="img"
                        viewBox="0 0 24 24"
                        width="1em"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M8.234 7.848a2 2 0 101.532-3.696 2 2 0 00-1.532 3.696zm1.532 2.304a2.001 2.001 0 10-1.533 3.698 2.001 2.001 0 001.533-3.697zm0 6a2.001 2.001 0 10-1.533 3.698 2.001 2.001 0 001.533-3.698zm4.469-8.304a2 2 0 101.531-3.696 2 2 0 00-1.531 3.696zm1.53 2.304a2.001 2.001 0 10-1.532 3.698 2.001 2.001 0 001.532-3.697zm0 6a2.001 2.001 0 10-1.532 3.698 2.001 2.001 0 001.532-3.698z"
                          fill-rule="evenodd"
                        />
                      </svg>
                      Name
                      <svg
                        aria-hidden="true"
                        class="emotion-10"
                        height="1em"
                        role="img"
                        viewBox="0 0 24 24"
                        width="1em"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M16.294 8.294a1 1 0 111.414 1.414l-5 5a1 1 0 01-1.414 0l-5.001-5a1 1 0 011.414-1.415l4.294 4.294 4.293-4.293z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-5"
      >
        <div
          class="emotion-1"
        >
          <h4
            class="emotion-0"
          >
            Kind of presentation
          </h4>
        </div>
        <div
          class="emotion-4"
        >
          <div
            class="emotion-46"
          >
            <div
              class="emotion-45"
            >
              <div
                class="emotion-44"
              >
                <div
                  class="emotion-43"
                >
                  <div
                    class="emotion-37"
                  >
                    <label
                      class="emotion-36"
                    >
                      <input
                        checked=""
                        class="emotion-33"
                        name="aggregator"
                        type="radio"
                        value="0"
                      />
                      <span
                        class="emotion-34"
                      />
                      <span
                        class="emotion-35"
                      >
                        Count
                      </span>
                    </label>
                  </div>
                  <div
                    class="emotion-37"
                  >
                    <label
                      class="emotion-36"
                    >
                      <input
                        class="emotion-33"
                        name="aggregator"
                        type="radio"
                        value="1"
                      />
                      <span
                        class="emotion-34"
                      />
                      <span
                        class="emotion-35"
                      >
                        Percentage
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-70"
    >
      <div
        class="emotion-69"
      >
        <div
          class="emotion-68"
        >
          <div
            class="emotion-65"
          >
            <div
              class="emotion-64"
            >
              <span
                class="emotion-50"
              >
                Applied filters
              </span>
              <div
                class="emotion-45"
              >
                <div
                  class="emotion-54"
                >
                  <div
                    class="emotion-53"
                  >
                    <div>
                      Name
                    </div>
                    <div
                      css="css-qqmm8i"
                    >
                      <span
                        class="emotion-52"
                      >
                        Apple
                        <svg
                          aria-hidden="true"
                          class="emotion-51"
                          height="1em"
                          role="img"
                          viewBox="0 0 24 24"
                          width="1em"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M8.071 6.657l4.243 4.242 4.242-4.242c.464-.48.935-.48 1.415 0s.48.95 0 1.414l-4.243 4.243 4.243 4.242c.471.472.471.943 0 1.415-.472.471-.943.471-1.415 0l-4.242-4.243L8.07 17.97c-.46.482-.932.482-1.414 0-.482-.483-.482-.954 0-1.415l4.242-4.242L6.657 8.07c-.472-.47-.472-.942 0-1.414s.943-.472 1.414 0v.001z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="emotion-54"
                >
                  <div
                    class="emotion-53"
                  >
                    <div>
                      Size
                    </div>
                    <div
                      css="css-qqmm8i"
                    >
                      <span
                        class="emotion-52"
                      >
                        Medium
                        <svg
                          aria-hidden="true"
                          class="emotion-51"
                          height="1em"
                          role="img"
                          viewBox="0 0 24 24"
                          width="1em"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M8.071 6.657l4.243 4.242 4.242-4.242c.464-.48.935-.48 1.415 0s.48.95 0 1.414l-4.243 4.243 4.243 4.242c.471.472.471.943 0 1.415-.472.471-.943.471-1.415 0l-4.242-4.243L8.07 17.97c-.46.482-.932.482-1.414 0-.482-.483-.482-.954 0-1.415l4.242-4.242L6.657 8.07c-.472-.47-.472-.942 0-1.414s.943-.472 1.414 0v.001z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      <span
                        class="emotion-52"
                      >
                        Very small
                        <svg
                          aria-hidden="true"
                          class="emotion-51"
                          height="1em"
                          role="img"
                          viewBox="0 0 24 24"
                          width="1em"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M8.071 6.657l4.243 4.242 4.242-4.242c.464-.48.935-.48 1.415 0s.48.95 0 1.414l-4.243 4.243 4.243 4.242c.471.472.471.943 0 1.415-.472.471-.943.471-1.415 0l-4.242-4.243L8.07 17.97c-.46.482-.932.482-1.414 0-.482-.483-.482-.954 0-1.415l4.242-4.242L6.657 8.07c-.472-.47-.472-.942 0-1.414s.943-.472 1.414 0v.001z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      <span
                        class="emotion-52"
                      >
                        Small
                        <svg
                          aria-hidden="true"
                          class="emotion-51"
                          height="1em"
                          role="img"
                          viewBox="0 0 24 24"
                          width="1em"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M8.071 6.657l4.243 4.242 4.242-4.242c.464-.48.935-.48 1.415 0s.48.95 0 1.414l-4.243 4.243 4.243 4.242c.471.472.471.943 0 1.415-.472.471-.943.471-1.415 0l-4.242-4.243L8.07 17.97c-.46.482-.932.482-1.414 0-.482-.483-.482-.954 0-1.415l4.242-4.242L6.657 8.07c-.472-.47-.472-.942 0-1.414s.943-.472 1.414 0v.001z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-67"
          >
            <button
              class="emotion-66"
              type="button"
            >
              <span>
                Clear filters
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-74"
    >
      <div
        class="emotion-73"
      >
        <button
          class="emotion-71"
          type="button"
        >
          <span>
            Clear table
          </span>
        </button>
        <div />
        <button
          class="emotion-72"
          type="button"
        >
          <span>
            Generate table
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
